fixed errors in profile edit

--- a/src/Frontend/ProfileEdit.form
+++ b/src/Frontend/ProfileEdit.form
@@ -34,7 +34,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="changeprofile" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jTextField1" min="-2" pref="205" max="-2" attributes="0"/>
+                          <Component id="password" min="-2" pref="205" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                               <Component id="pass" min="-2" max="-2" attributes="0"/>
@@ -114,7 +114,7 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
-              <Component id="jTextField1" min="-2" pref="38" max="-2" attributes="0"/>
+              <Component id="password" min="-2" pref="38" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="pass" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="91" max="32767" attributes="0"/>
@@ -202,7 +202,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="changecoverActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="password">
     </Component>
     <Component class="javax.swing.JButton" name="pass">
       <Properties>
